# mass-scanner

./: .gitignore  .gitmodules  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/zachdeibert/massscanner/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/github/zachdeibert/massscanner/ui/: UIUtilInstrumentedTest.kt
app/src/c/: image.c  image.h  jni.c  luminanceProbe.c  main.c  state.h
app/src/main/: AndroidManifest.xml
app/src/main/c/: errors.h  geometry.c  geometry.h  history.c  history.h  image.c  image.h  jni.c  jni_iface.h  log.c  log.h  luminanceProbe.c  luminanceProbe.h  luminance_probe.c  luminance_probe.h  main.c  main.h  multi_probe_least_squares.c  multi_probe_least_squares.h  perpendicular_angle_bisector.c  perpendicular_angle_bisector.h  state.h
app/src/main/java/com/github/zachdeibert/massscanner/: MainActivity.kt
app/src/main/java/com/github/zachdeibert/massscanner/ui/: PermissionActivity.kt  UIUtil.kt
app/src/main/java/com/github/zachdeibert/massscanner/ui/scan/: CameraPreviewFragment.kt  FocusActivity.kt  FocusViewModel.kt  ScanActivity.kt  ScanAugmentView.kt  ScanNative.kt  ScanThread.kt  ScanUIFragment.kt  ScanUIViewModel.kt  ScanViewModel.kt
app/src/main/java/com/github/zachdeibert/massscanner/util/: AsyncImageReader.kt  Race2.kt  Race3.kt  Race4.kt  RaceBase.kt  Tuple.kt
app/src/main/java/com/github/zachdeibert/massscanner/util/iface/: CameraCaptureSessionStateCallback.kt  CameraDeviceStateCallback.kt
app/src/main/res/: ic_LICENSE
app/src/main/res/drawable/: scan_glow.xml
app/src/main/res/layout/: activity_focus.xml  activity_permission.xml  activity_scan.xml  fragment_camera_preview.xml  fragment_scan_ui.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/c/: CMakeLists.txt  bitmap.c  bitmap.h  geometry.c  luminanceProbe.c  luminance_probe_test.c  main.c  multi_probe_least_squares_test.c  perpendicular_angle_bisector_test.c  test_image.xcf  testing.c  testing.h  tests.h.in
app/src/test/java/com/github/zachdeibert/massscanner/: AssertHelper.kt  ExampleUnitTest.kt
app/src/test/java/com/github/zachdeibert/massscanner/ui/: UIUtilTest.kt
app/src/test/java/com/github/zachdeibert/massscanner/ui/scan/: ScanNativeTest.kt
app/src/test/java/com/github/zachdeibert/massscanner/util/: Race2Test.kt  Race3Test.kt  Race4Test.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/: copyIcons.sh
